--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation 'org.slf4j:slf4j-simple:2.0.1'
+    implementation 'io.github.microutils:kotlin-logging:3.0.0'
 }
 
 test {
